Set ui-view div inside a ui-view-wrapper div and created bottom margin to avoid content hiding behind fixed footer.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,11 +4,15 @@ html, body {
   height: 100%;
   margin: 0;
   background-color: rgb(17,19,68);
-  background-image: url('/img/pineapples.jpeg');
+  background: url('/img/pineapples.jpeg') no-repeat center center fixed;
   background-size: cover;
   /*display: flex;
   min-height: 100vh;
   flex-direction: column;*/
+}
+
+.ui-view-wrapper {
+  margin-bottom: 41px;
 }
 
 h5 {
@@ -157,20 +161,16 @@ nav ul li a {
 /*** FOOTER STYLING ***/
 
 footer {
-  position: fixed;
-}
-
-footer a {
-
+  text-align: center;
 }
 
 footer.page-footer {
   left:0px; bottom:0px; right:0px;
   width: 100%;
+  height: 41px;
   margin: 0;
-  padding: 0;
+  padding: 10px 0;
   position: fixed;
-  padding: 1rem;
 }
 
 /*footer.page-footer p, footer.page-footer ul,
